--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     </script>
     <script src="third/angular/angular.min.js"></script>
     <script src="third/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="third/angular-cookies/angular-cookies.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
